# revo_robot

./: .gitignore  .gitmodules  .rosinstall  NOTESforROS.txt  README.md  calibrate.cpp  installEDT.bash
base_controller/: CMakeLists.txt  data-collection.launch  package.xml  record_data_for_behavioral_cloning.launch  rosdoc.yaml  start.launch
base_controller/msg/: Xbox_Button_Msg.msg  diagnostics_msg.msg
base_controller/src/: joystick_teleop.cpp  keyboard_teleop.cpp
base_controller/test/: utest.cpp
camera1394stereo/: .gitignore  CHANGELOG.rst  CMakeLists.txt  camera1394stereo_nodelet.xml  package.xml  rosdep.yaml
camera1394stereo/cfg/: Camera1394Stereo.cfg
camera1394stereo/launch/: nodelet_manager.launch  nodelet_pipeline.launch  nodelet_standalone.launch  stereo_camera.launch  stereo_camera_full.launch
gps_goal/: CMakeLists.txt  gps_goal.launch  package.xml
gps_goal/src/: gps_goal.cpp
husky_model/husky_interactive_markers/: CHANGELOG.rst  CMakeLists.txt  package.xml
lane_finding/calibration/: CMakeLists.txt  Makefile  calibrate.cpp  detectMarker.cpp  fly.cpp  genCharuco.cpp  genMarker.cpp  in_VID5.xml  laptop_cam_calibration.yaml
line_detection/: CMakeLists.txt  README.md  package.xml  roi.yaml  roi_240p.yaml  roi_pixel_calc.yaml  roi_stereo.yaml  scipio_gazebo_roi_points.yaml  scipio_gazebo_roi_points_left.yaml  scipio_gazebo_roi_points_left.yaml~  scipio_gazebo_roi_points_right.yaml  scipio_gazebo_roi_points_right.yaml~  scipio_roi_points.yaml  scipio_roi_points.yaml~
line_detection/cfg/: ImageResizer.cfg  LineDetection.cfg
line_detection/launch/: all_camera_stuff.launch  backproject-brightestpixel.launch  backproject_brightestpixel_dilate.launch  backproject_brightestpixel_dilate_hough.launch  backproject_brightestpixel_dilate_lswms.launch  backproject_equalize_brightestpixel.launch  backproject_equalize_brightestpixel_fitline.launch  backproject_only.launch  backprojectgrass_for_disparity_image_view_reconfig.launch  backprojectgrass_noskel_image_view_reconfig.launch  backprojectgrass_noskel_reconfig.launch  blob.launch  blur.launch  brightest-pixel.launch  brightest_pixel.launch  dilate.launch  dilate_only.launch  fitline.launch  flag_linedetection.launch  gabor.launch  gabor_linedetection.launch  generic.launch  generic_linedetection.launch  histogram_calculator.launch  histogram_equalization.launch  histogram_equalization_adaptive.launch  histogram_equalization_compare.launch  histogram_summation.launch  igvc2016_linedetection.launch  igvc_linedetection.launch  igvc_linedetection_gazebo.launch  igvc_linedetection_gazebo.launch~  igvctest.launch  image_resizer.launch  image_resizer_view.launch  kmeans.launch  monocular_pair_stereo.launch  only_line_detection_and_image_view.launch  only_line_detection_and_image_view_with_tf.launch  pixel_to_coordinate_calculator.launch  (+10 more)
line_detection/misc/: GUI_test.py  flag_detection_test.py  test_cv_bridge.py
line_detection/src/: GUI_test.py  and_mask.py  backproject-for-disparity.py  backproject-noskel.py  backproject-skeletonize.py  backproject.py  blob_detection.py  blur.py  brightest-pixel.py  canny-backproject.py  canny.py  circle_roi.py  dilate.py  erode.py  fitline.py  flag_detection.py  flage_line_det.py  gabor-linedetection.py  gabor.py  generic-linedetection.py  generic.py  histogram-calculator.py  histogram-equalization.py  histogram-summation.py  hough.py  hsv_filter.py  image-resizer.py  kmeans.py  lane_detection.py  line_detection.py  lswms_node.cpp  mask.py  max_mask.py  pixel_to_coordinate_calculator.py  pixel_to_coordinate_calculator_right.py  pointcloud_publisher.py  pointcloud_publisher_right.py  scipio_roi.py  scipio_roi.py~  scipio_roi_left.py  (+8 more)
microstrain_3dmgx2_imu/: CHANGELOG.rst  CMakeLists.txt  microstrain_3dmgx2.launch  package.xml
microstrain_3dmgx2_imu/src/: 3dmgx2.cc  get_id.cpp  imu_node.cc
microstrain_3dmgx2_imu/srv/: AddOffset.srv
odom/: CMakeLists.txt  GPSOdom.launch  odom.cpp  odom.launch  odometry.cpp  odometry.h  package.xml
robot_setup_tf/: CMakeLists.txt  package.xml
roboteq_node/: CMakeLists.txt  package.xml
roboteq_node/include/: roboteqCom.h  roboteqComEvent.h  roboteqComEventArgs.h  roboteqMutex.h  roboteqThread.h  serialException.h  serialLogger.h  serialNetPort.h  serialPort.h  stringUtil.h
roboteq_node/test/: roboteq_utest.cpp
rqt_igvc_dashboard/: CMakeLists.txt  package.xml  plugin.xml
rqt_igvc_dashboard/resource/: igvcDashboard.ui
rqt_igvc_dashboard/src/: igvcDashboard.cpp
scipio_2dnav/: CMakeLists.txt  base_local_planner_params.yaml  camera_tf.launch  costmap_common_params.yaml  global_costmap_params.yaml  gps.launch  krystian.launch  local_costmap_params.yaml  mainpage.dox  manifest.xml  move_base.launch  nav_master.launch  navigation_setup.rviz  odom_only.launch  package.xml  scipio_config.launch  utm_transform_node.launch
scipio_2dnav/config/: base_global_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params.yaml~  global_costmap_params.yaml  global_costmap_params.yaml~  local_costmap_params.yaml
scipio_2dnav/dyreconf/: global_costmap.yaml  local_costmap.yaml  move_base.yaml  planner.yaml
scipio_2dnav/launch/: demo.launch  move_base.launch  navigation.launch  roboteq-serial.launch  sensors.launch  static_transforms.launch
simple_navigation_goals/: CMakeLists.txt  package.xml
simple_navigation_goals/src/: simple_navigation_goals.cpp
simulation/gazebo_config/: CMakeLists.txt  gazeboekf-new.launch  gazeboekf.launch  gps.launch  package.xml
simulation/lcsr_camera_models/: CMakeLists.txt  bumblebee.launch  package.xml  stereo_camera.urdf.xacro  test.launch  test.urdf.xacro
simulation/scipio_simulation/: CMakeLists.txt  READ_ME_FIRST.txt  manifest.xml  model.config  package.xml  scipio_simulation.sdf
state_machine/: CMakeLists.txt  package.xml
state_machine/include/: state_machine.h  subscribe.h
state_machine/launch/: state_machine.launch
state_machine/msg/: CPU.msg  gpsGuy.msg
state_machine/scripts/: running_nodes.py
state_machine/src/: cpu_consumption.cpp  sm_main.cpp  (+4 more)
(+231 files in other folders)
