<?xml version="1.0"?>
<package>
  <name>simple_navigation_goals</name>
  <version>0.9.0</version>
  <description>The simple_navigation_goals package</description>

  <maintainer email="krgebis@gmail.com">Krystian-L0g1x</maintainer>

  <license>GPLv2</license>

  <author email="krgebis@gmail.com">Krystian-L0g1x</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>roscpp</run_depend>

</package>
