<?xml version="1.0"?>
<package>
  <name>husky_interactive_markers</name>
  <version>0.0.1</version>
  <description>Interactive markers for controlling Husky from inside rviz.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  
  <export>
  </export>
</package>
