cmake_minimum_required(VERSION 2.8)
project( ArUco )
find_package( OpenCV REQUIRED )
add_executable( genMarker genMarker.cpp )
add_executable( detectMarker detectMarker.cpp )
add_executable( charuco genCharuco.cpp )
add_executable( calibrate calibrate.cpp )
add_executable( fly fly.cpp )
target_link_libraries( genMarker ${OpenCV_LIBS} )
target_link_libraries( detectMarker ${OpenCV_LIBS} )
target_link_libraries( charuco ${OpenCV_LIBS} )
target_link_libraries( calibrate ${OpenCV_LIBS} )
target_link_libraries( fly ${OpenCV_LIBS} )
