<?xml version="1.0"?>
<package>
  <name>gazebo_config</name>
  <version>0.5.0</version>
  <description>The gazebo_config package</description>

  <maintainer email="krgebis@gmail.com">Krystian-L0g1x</maintainer>

  <license>GPLv2</license>
  <author email="krgebis@gmail.com">Krystian-L0g1x</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
