<package>
  <name>lcsr_camera_models</name>
  <version>0.1.0</version>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>
  <description>
    A stereo camera plugin for gazebo.
  </description>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>camera1394stereo</run_depend>

</package>
